test: test docker builder

--- a/.github/workflows/docker-build-deploy.yml
+++ b/.github/workflows/docker-build-deploy.yml
@@ -70,14 +70,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2  # 拉取代码
 
-      - name: Set up SSH
-        uses: webfactory/ssh-agent@v0.5.3
-        with:
-          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
-
       - name: Sync files to server
         run: |
-          rsync -avz --delete . ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_PASSWORD }}:~/bigwork/bigwork
+          sshpass -p ${{ secrets.SERVER_PASSWORD }} ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_HOST }}:~/bigwork/bigwork
 
       - name: Deploy to server
         uses: appleboy/ssh-action@master  # 使用 SSH 连接到服务器
