--- a/.github/workflows/docker-build-deploy.yml
+++ b/.github/workflows/docker-build-deploy.yml
@@ -72,7 +72,8 @@ jobs:
 
       - name: Sync files to server
         run: |
-          sshpass -p ${{ secrets.SERVER_PASSWORD }} ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_HOST }}:~/bigwork/bigwork
+          sudo apt-get install sshpass
+          sshpass -p ${{ secrets.SERVER_PASSWORD }} scp -r . ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_HOST }}:~/bigwork/bigwork
 
       - name: Deploy to server
         uses: appleboy/ssh-action@master  # 使用 SSH 连接到服务器
