--- a/.github/workflows/docker-build-deploy.yml
+++ b/.github/workflows/docker-build-deploy.yml
@@ -32,10 +32,10 @@ jobs:
           restore-keys: |
             maven-Linux-  # 通用缓存键
 
-      - name: reset to newest commit
+      - name: Reset to newest commit
         run: |
           git fetch
-          git reset --hard ${{github.sha}}
+          git reset --hard origin/iteration/${{ github.ref_name }}  # 切换到当前分支的最新提交
           git status
 
       - name: Build sources
@@ -63,6 +63,12 @@ jobs:
           push: true  # 推送镜像到 Docker Hub
           tags: monet12345/bigwork_apitest:apitest  # 镜像标签
 
+      - name: Verify Docker images
+        run: |
+          echo "Verifying Docker images..."
+          docker pull monet12345/bigwork_meta:meta
+          docker pull monet12345/bigwork_apitest:apitest
+
   deploy:
     runs-on: ubuntu-latest
     needs: build-and-push  # 依赖 build-and-push 任务
@@ -77,8 +83,18 @@ jobs:
           username: ${{ secrets.SERVER_USERNAME }}  # 服务器用户名
           password: ${{ secrets.SERVER_PASSWORD }}  # 服务器密码
           script: |
+            echo "Deploying to server..."
             cd ~/bigwork/bigwork
             git fetch
-            git reset --hard ${{ github.sha }}
-            docker-compose down --remove-orphans
+            git reset --hard origin/iteration/${{ github.ref_name }}  # 切换到当前分支的最新提交
+            echo "Cleaning up old containers and networks..."
+            docker-compose down --remove-orphans || true  # 清理旧容器
+            docker network rm bigwork_app-network || true  # 清理旧网络
+            echo "Pulling latest images..."
+            docker-compose pull
+            echo "Building Docker images..."
+            docker-compose build
+            echo "Starting containers..."
             docker-compose up -d
+            echo "Deployment completed!"
+            docker-compose logs -f  # 查看日志
