test: test docker builder

--- a/bigwork_apitest/src/main/resources/application.yml
+++ b/bigwork_apitest/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
   datasource:
     username: fangchen
     password: "chen160213497"
-    url: jdbc:mysql://localhost:3307/big_work_db
+    url: jdbc:mysql://127.0.0.1:3307/big_work_db
     driver-class-name: com.mysql.cj.jdbc.Driver
 swagger:
   enable: true
