--- a/bigwork_apitest/src/main/resources/application.yml
+++ b/bigwork_apitest/src/main/resources/application.yml
@@ -5,9 +5,9 @@ server:
     context-path: /apitest
 spring:
   datasource:
-    username: fangchen
-    password: "chen160213497"
-    url: jdbc:mysql://127.0.0.1:3307/big_work_db
+    username: ${SPRING_DATASOURCE_USERNAME}
+    password: ${SPRING_DATASOURCE_PASSWORD}
+    url: ${SPRING_DATASOURCE_URL}
     driver-class-name: com.mysql.cj.jdbc.Driver
 swagger:
   enable: true
