--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,12 @@
 version: '3.8'
 
+# 需要的环境变量
+# MYSQL_ROOT_PASSWORD   - mysql的root密码
+# MYSQL_DATABASE        - mysql的数据库
+# MYSQL_USER            - mysql的用户名
+# MYSQL_PASSWORD        - mysql的密码
+# SERVER_HOSE           - 服务器ip
+
 services:
   redis:
     image: redis:latest
@@ -17,10 +24,10 @@ services:
     ports:
       - "3307:3306"  # 将容器的 3306 端口映射到主机的 3306 端口
     environment:
-      MYSQL_ROOT_PASSWORD: chen160213497  # 设置 MySQL root 用户的密码
-      MYSQL_DATABASE: big_work_db         # 创建一个默认数据库
-      MYSQL_USER: fangchen           # 创建一个新用户
-      MYSQL_PASSWORD: chen160213497       # 设置新用户的密码
+      MYSQL_ROOT_PASSWORD:          ${MYSQL_ROOT_PASSWORD}      # 设置 MySQL root 用户的密码
+      MYSQL_DATABASE:               ${MYSQL_DATABASE}           # 创建一个默认数据库
+      MYSQL_USER:                   ${MYSQL_USER}               # 创建一个新用户
+      MYSQL_PASSWORD:               ${MYSQL_PASSWORD}           # 设置新用户的密码
     volumes:
       - mysql_data:/var/lib/mysql  # 持久化 MySQL 数据
     networks:
@@ -35,12 +42,12 @@ services:
     environment:
       SPRING_REDIS_HOST: redis
       SPRING_REDIS_PORT: "6379"
-      SPRING_DATASOURCE_URL: jdbc:mysql://127.0.0.1:3307/big_work_db  # 使用 MySQL 服务
-      SPRING_DATASOURCE_USERNAME: fangchen                  # MySQL 用户名
-      SPRING_DATASOURCE_PASSWORD: chen160213497                  # MySQL 密码
+      SPRING_DATASOURCE_URL:            jdbc:mysql://${SERVER_HOSE}:3307/${MYSQL_DATABASE}      # 使用 MySQL 服务
+      SPRING_DATASOURCE_USERNAME:       ${MYSQL_USER}                                           # MySQL 用户名
+      SPRING_DATASOURCE_PASSWORD:       ${MYSQL_PASSWORD}                                       # MySQL 密码
     depends_on:
       - redis
-#      - mysql
+      - mysql
     networks:
       - app-network
 
@@ -52,12 +59,12 @@ services:
     environment:
       SPRING_REDIS_HOST: redis
       SPRING_REDIS_PORT: "6379"
-      SPRING_DATASOURCE_URL: jdbc:mysql://127.0.0.1:3307/big_work_db  # 使用 MySQL 服务
-      SPRING_DATASOURCE_USERNAME: fangchen                  # MySQL 用户名
-      SPRING_DATASOURCE_PASSWORD: chen160213497                  # MySQL 密码
+      SPRING_DATASOURCE_URL:        jdbc:mysql://${SERVER_HOSE}:3307/${MYSQL_DATABASE}      # 使用 MySQL 服务
+      SPRING_DATASOURCE_USERNAME:   ${MYSQL_USER}                                           # MySQL 用户名
+      SPRING_DATASOURCE_PASSWORD:   ${MYSQL_PASSWORD}                                       # MySQL 密码
     depends_on:
       - redis
-#      - mysql
+      - mysql
     networks:
       - app-network
 
