--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,8 @@ services:
   redis:
     image: redis:latest
     container_name: redis
-    ports:
-      - "6379:6379"
+#    ports:
+#      - "6379:6379"
     volumes:
       - redis_data:/data  # 持久化 Redis 数据
     networks:
@@ -20,8 +20,8 @@ services:
   mysql:
     image: mysql:8.0  # 使用 MySQL 8.0 镜像
     container_name: mysql
-#    ports:
-#      - "3307:3307"  # 将容器的 3306 端口映射到主机的 3306 端口
+    ports:
+      - "3307:3307"  # 将容器的 3306 端口映射到主机的 3306 端口
     environment:
       MYSQL_ROOT_PASSWORD:          ${MYSQL_ROOT_PASSWORD}      # 设置 MySQL root 用户的密码
       MYSQL_DATABASE:               ${MYSQL_DATABASE}           # 创建一个默认数据库
