--- a/bigwork_apitest/src/main/resources/application.yml
+++ b/bigwork_apitest/src/main/resources/application.yml
@@ -1,16 +1,6 @@
-# 服务器配置
-server:
-  port: 8083  # 应用程序运行的端口号
-  servlet:
-    context-path: /apitest
 spring:
-  datasource:
-    username: ${SPRING_DATASOURCE_USERNAME}
-    password: ${SPRING_DATASOURCE_PASSWORD}
-    url: ${SPRING_DATASOURCE_URL}
-    driver-class-name: com.mysql.cj.jdbc.Driver
-swagger:
-  enable: true
-mybatis:
-  mapper-locations: classpath*:mapper/*.xml
-  type-aliases-package: com.bigwork.bigwork_apitest.model
+  profiles:
+    active: ${MY_ENV_VARIABLE} # 默认使用本地配置
+
+    #本地执行命令：set MY_ENV_VARIABLE=local
+    #服务器执行: export MY_ENV_VARIABLE=prod
