feat: test apache service to forward http header. [test]

--- a/httpd.conf
+++ b/httpd.conf
@@ -560,3 +560,6 @@ ProxyPassReverse "/meta" "http://app1:8082/meta"
 ProxyPass "/apitest" "http://app2:8083/apitest"
 ProxyPassReverse "/apitest" "http://app2:8083/apitest"
 
+# 确保原始的客户端 IP 和协议被传递给后端
+RequestHeader set X-Forwarded-For %{REMOTE_ADDR}s
+RequestHeader set X-Forwarded-Proto "http"
