通过websocket接收新消息后存入数据库，定义kafka生产者并把消息注入kafka

--- a/bigwork_apitest/src/main/resources/application-local.yml
+++ b/bigwork_apitest/src/main/resources/application-local.yml
@@ -17,3 +17,9 @@ swagger:
 mybatis:
   mapper-locations: classpath*:mapper/*.xml
   type-aliases-package: com.bigwork.bigwork_apitest.model
+config:
+  kafka:
+    servers: "localhost:9092"
+
+netty:
+  port: 8084
