--- a/bigwork_apitest/src/main/resources/application-prod.yml
+++ b/bigwork_apitest/src/main/resources/application-prod.yml
@@ -17,3 +17,5 @@ swagger:
 mybatis:
   mapper-locations: classpath*:mapper/*.xml
   type-aliases-package: com.bigwork.bigwork_apitest.model
+netty:
+  port: 8084
