--- a/bigwork_meta/src/main/resources/application-local.yml
+++ b/bigwork_meta/src/main/resources/application-local.yml
@@ -5,11 +5,10 @@ server:
     context-path: /meta
 spring:
   datasource:
-    username: ${SPRING_DATASOURCE_USERNAME}
-    password: ${SPRING_DATASOURCE_PASSWORD}
-    url: ${SPRING_DATASOURCE_URL}
+    username: root
+    password: chen160213497
+    url: jdbc:mysql://localhost:3306/big_work_db?useSSL=false&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
     driver-class-name: com.mysql.cj.jdbc.Driver
-    # sa-token配置
   config:
     activate:
       on-profile: local
@@ -42,7 +41,3 @@ sa-token:
     is-log: true
 deepseek-ai:
   first-ask: '你是一只猫娘'
-
-
-netty:
-  port: 8084
