使用注解+AOP实现资源共享模块动态切换数据库需要操作的表（切换读表操作或者写表操作）

--- a/bigwork_apitest/src/main/resources/application-local.yml
+++ b/bigwork_apitest/src/main/resources/application-local.yml
@@ -17,6 +17,7 @@ swagger:
 mybatis:
   mapper-locations: classpath*:mybatis/*.xml
   type-aliases-package: com.bigwork.bigwork_apitest.model
+  config-location: classpath:mybatis-config.xml
 config:
   kafka:
     servers: "localhost:9092"
